# trabalho_jardim

./: Adubo.cpp  Adubo.h  CMakeLists.txt  Cantora.cpp  Cantora.h  Cato.cpp  Cato.h  DEFESA_PREPARACAO.md  Erva.cpp  Erva.h  Ferramenta.cpp  Ferramenta.h  Interface.cpp  Interface.h  Jardim.cpp  Jardim.h  Jardineiro.cpp  Jardineiro.h  Planta.cpp  Planta.h  Posicao.cpp  Posicao.h  Pulverizador.cpp  Pulverizador.h  Regador.cpp  Regador.h  Relatorio.docx  Relatório Trabalho Prático de Programação Orientada a Objetos.docx  Relatório Trabalho Prático de Introdução à Inteligência Artificial.docx  Relatório Trabalho Prático de Programação Orientada a Objetos.docx  Roseira.cpp  Roseira.h  Settings.h  Tesoura.cpp  Tesoura.h  comandos_jardim.txt  main.cpp  ~$latório Trabalho Prático de Programação Orientada a Objetos.docx
test/: README.txt  output_cantora.txt  output_roseira.txt  output_snap_tools.txt  output_snap_tools_hand.txt  run_all_tests.ps1  run_tests.bat  run_tests.ps1  test_adubo.txt  test_cacto_agua_alta.txt  test_cacto_mult.txt  test_cantora.txt  test_cantora_bonita.txt  test_cantora_morte.txt  test_erva_morte_60.txt  test_erva_mult.txt  test_integration_full.txt  test_integration_plants.txt  test_jardineiro_colheita.txt  test_jardineiro_entrada_saida.txt  test_jardineiro_ferramentas.txt  test_jardineiro_movimento.txt  test_jardineiro_plantacao.txt  test_pulverizador.txt  test_regador.txt  test_roseira_death.txt  test_roseira_morte_nutrientes.txt  test_roseira_mult.txt  test_roseira_vizinhos.txt  test_snap_tools.txt  test_snap_tools_hand.txt  test_tesoura.txt
