cmake_minimum_required(VERSION 3.30)
project(trabalho_jardim)

set(CMAKE_CXX_STANDARD 20)

add_executable(trabalho_jardim
        main.cpp
        Cato.cpp
        Interface.cpp
        Planta.cpp
        Adubo.h
        Cato.h
        Erva.h
        Ferramenta.h
        Interface.h
        Jardim.h
        Jardineiro.h
        Planta.h
        Posicao.h
        Regador.h
        Roseira.h
        Settings.h
        Tesoura.h
)
